ressources/production/apps/dokuwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dokuwiki
  name: dokuwiki
  labels:
    app: dokuwiki
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: dokuwiki
